# application-and-server

./: .gitignore  Pipfile  README.md  cert.pem  dockerfile  key.pem  pyproject.toml  secrets.json  server.py  start.sh  stop.sh
client/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: App.js  App.tsx  index.css  index.tsx  routes.tsx
client/src/api/: index.ts
client/src/api/auth/: index.ts
client/src/api/image/: index.ts
client/src/api/model/: index.ts
client/src/api/point/: history.ts  index.ts
client/src/api/rank/: index.ts
client/src/components/: BackgroundOverlay.tsx  BottomNav.tsx  MainCardContent.tsx  NavBar.tsx  RouterTransition.tsx  SubPage.tsx  TabBar.tsx
client/src/components/common/: Button.tsx  CameraModal.tsx  Card.tsx  CardContent.tsx  Container.tsx  Deriv.tsx  Icon.tsx  ListItem.tsx  (+7 more)
client/src/containers/: AppContainer.tsx  LoginCheckContainer.tsx
client/src/hooks/: useErrorMessage.ts  usePoint.ts  useProfile.ts  useRank.ts  useTimeout.ts  useWebcam.ts
client/src/models/: CityModel.ts  RegionModel.ts
client/src/pages/: LoginPage.tsx  MainPage.tsx  NotificationsPage.tsx  PointPage.tsx  PointsPage.tsx  ProfilePage.tsx  RankPage.tsx  RanksPage.tsx  SignupPage.tsx  index.tsx
client/src/store/: AuthStore.ts  UserStore.ts
client/src/stores/: useAuthStore.ts
client/src/theme/: StyleScheme.ts  ThemeSheet.ts
client/src/types/: PointRecord.ts  RankRecord.ts  Region.ts
client/src/utils/: axios.ts  cookie.ts  utility.ts
server/: .gitignore  README.md  ai_service.py  auth.py  database.py  detection.py  image.py  point.py  ranking.py  server.py  tokens.py
server/src/server/: server.py
test/: package-lock.json  package.json
test/src/: App.js  Cookie.js  index.js
(+25 files in other folders)
