[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["lnsqj123 <holmane33@gmail.com>"]
readme = "README.md"
packages = [{include = "server", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "3.0.2"
pymongo = "4.6.3"
pyjwt = "2.8.0"
flask-restx = "1.3.0"
python-dotenv = "1.0.1"
torch = "2.2.2"
pillow = "10.2.0"
torchvision = "0.17.2"
ultralytics = "8.1.44"
numpy = "1.23.5"
gunicorn = "21.2.0"
deepface = "^0.0.91"
tensorflow-io-gcs-filesystem = "0.31.0"
pandas = "^2.2.2"
tensorflow = "2.12.0"
ml-dtypes = "^0.4.0"
facenet-pytorch = "2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
